feat: add user and date
