# apps/backend/src/todo/dto/update-todo.dto.ts
@@ -6,9 +6,4 @@ import { ApiProperty, ApiPropertyOptional, ApiSchema } from '@nestjs/swagger';
   name: 'UpdateTodoDto',
   description: 'Object for updating a todo item',
 })
-export class UpdateTodoDto extends PartialType(CreateTodoDto) {
-  @ApiPropertyOptional({
-    description: 'Is the todo item completed?',
-  })
-  isCompleted?: boolean;
-}
+export class UpdateTodoDto extends PartialType(CreateTodoDto) {}
