# apps/backend/src/todo/entities/todo.entity.ts
@@ -2,4 +2,7 @@ export interface Todo {
   id: number;
   title: string;
   isCompleted: boolean;
+  dueDate?: number;
+  createdAt: number;
+  assignedTo?: string;
 }
